force-app/main/default/objects/Hirep__c/Hirep__c.object-meta.xml
<CustomObject>
    <description>Custom object to store the detail information about hiring and replacement process for different positions.</description>
    <label>HIREP</label>
    <nameField>
        <displayFormat>HIREP-{0000}</displayFormat>
        <label>HIREP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HIREP</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>