force-app/main/default/objects/Hirep__c/fields/Appointee_Bayer_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Appointee_Bayer_E_mail__c</fullName>
    <label>Appointee Bayer E-mail</label>
    <type>Email</type>
</CustomField>