force-app/main/default/objects/Hirep__c/fields/Appointee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Appointee_First_Name__c</fullName>
    <label>Appointee First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>