force-app/main/default/objects/Hirep__c/fields/Appointee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Appointee_Last_Name__c</fullName>
    <label>Appointee Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>