force-app/main/default/objects/Hirep__c/fields/CH_Position__c.field-meta.xml
<CustomField>
    <fullName>CH_Position__c</fullName>
    <formula>TEXT(Consumer_Health_Related_Position__c)</formula>
    <label>CH Position</label>
    <type>Text</type>
</CustomField>