force-app/main/default/objects/Hirep__c/fields/Commences__c.field-meta.xml
<CustomField>
    <fullName>Commences__c</fullName>
    <label>Commences</label>
    <type>Date</type>
</CustomField>