force-app/main/default/objects/Hirep__c/fields/Commences_Date__c.field-meta.xml
<CustomField>
    <fullName>Commences_Date__c</fullName>
    <label>Commences Date</label>
    <type>Date</type>
</CustomField>