force-app/main/default/objects/Hirep__c/fields/Consumer_Health_Related_Position__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Health_Related_Position__c</fullName>
    <label>Consumer Health Related Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>