force-app/main/default/objects/Hirep__c/fields/Contract_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period_From__c</fullName>
    <label>Contract Period From</label>
    <type>Date</type>
</CustomField>