force-app/main/default/objects/Hirep__c/fields/Contract_Period_To__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period_To__c</fullName>
    <label>Contract Period To</label>
    <type>Date</type>
</CustomField>