force-app/main/default/objects/Hirep__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Contractor/Insourced</fullName>
            </value>
            <value>
                <fullName>CRO/Outsourced</fullName>
            </value>
            <value>
                <fullName>BayJob</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Short Term Assignment</fullName>
            </value>
            <value>
                <fullName>No Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>