force-app/main/default/objects/Hirep__c/fields/Cost_Center_Owner__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If different to MAPV Department</inlineHelpText>
    <label>Cost Center Owner</label>
    <referenceTo>MAPV_Department__c</referenceTo>
    <relationshipLabel>HIREP (Cost Center Owner)</relationshipLabel>
    <relationshipName>HIREP1</relationshipName>
    <type>Lookup</type>
</CustomField>