force-app/main/default/objects/Hirep__c/fields/CWID__c.field-meta.xml
<CustomField>
    <fullName>CWID__c</fullName>
    <label>CWID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>