force-app/main/default/objects/Hirep__c/fields/Deputy_Manager_Admin__c.field-meta.xml
<CustomField>
    <fullName>Deputy_Manager_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deputy Manager / Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HIREP1</relationshipName>
    <type>Lookup</type>
</CustomField>