force-app/main/default/objects/Hirep__c/fields/Final_Approval_by__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_by__c</fullName>
    <label>Final Approval by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>