force-app/main/default/objects/Hirep__c/fields/Final_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Comments__c</fullName>
    <label>Final Approval Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>