force-app/main/default/objects/Hirep__c/fields/Final_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Status__c</fullName>
    <label>Final Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>