force-app/main/default/objects/Hirep__c/fields/FTE_Requirement__c.field-meta.xml
<CustomField>
    <fullName>FTE_Requirement__c</fullName>
    <label>FTE Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>