force-app/main/default/objects/Hirep__c/fields/Grant_access_to_UMA__c.field-meta.xml
<CustomField>
    <fullName>Grant_access_to_UMA__c</fullName>
    <label>Grant access to UMA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>