force-app/main/default/objects/Hirep__c/fields/Hirep_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Hirep_Process_Status__c</fullName>
    <label>HIREP Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-approval Request</fullName>
                <default>true</default>
                <label>Pre-approval Request</label>
            </value>
            <value>
                <fullName>Final Approval Request</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>