force-app/main/default/objects/Hirep__c/fields/Local_Job_Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Local_Job_Role_Title__c</fullName>
    <label>Local Job Role Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>