force-app/main/default/objects/Hirep__c/fields/MAPV_Department_Formula__c.field-meta.xml
<CustomField>
    <fullName>MAPV_Department_Formula__c</fullName>
    <description>Used in HIREP sharing settings to share the record to respective request manager of MAPV Department.</description>
    <label>MAPV Department Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>