force-app/main/default/objects/Hirep__c/fields/MAPV_Group__c.field-meta.xml
<CustomField>
    <fullName>MAPV_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAPV Group</label>
    <referenceTo>MAPV_Group__c</referenceTo>
    <relationshipLabel>HIREP</relationshipLabel>
    <relationshipName>HIREP</relationshipName>
    <type>Lookup</type>
</CustomField>