force-app/main/default/objects/Hirep__c/fields/MGMT_Approval__c.field-meta.xml
<CustomField>
    <fullName>MGMT_Approval__c</fullName>
    <label>MGMT Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-approval Pending</fullName>
            </value>
            <value>
                <fullName>Pre-approval Rejected</fullName>
            </value>
            <value>
                <fullName>Pre-approval Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>