force-app/main/default/objects/Hirep__c/fields/Need_for_Position__c.field-meta.xml
<CustomField>
    <fullName>Need_for_Position__c</fullName>
    <label>Need for Position</label>
    <length>150</length>
    <type>Text</type>
</CustomField>