force-app/main/default/objects/Hirep__c/fields/Person_replaced_contract_extended__c.field-meta.xml
<CustomField>
    <fullName>Person_replaced_contract_extended__c</fullName>
    <label>Person replaced / contract extended</label>
    <length>20</length>
    <type>Text</type>
</CustomField>