force-app/main/default/objects/Hirep__c/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <label>Position Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Contract Extension</fullName>
            </value>
            <value>
                <fullName>Person Transfer</fullName>
            </value>
            <value>
                <fullName>Position Transfer</fullName>
            </value>
            <value>
                <fullName>Position Conversion</fullName>
            </value>
            <value>
                <fullName>Temp to Perm Conversion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>