force-app/main/default/objects/Hirep__c/fields/Position_Workers_Council_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Position_Workers_Council_Relevant__c</fullName>
    <inlineHelpText>For positions in Germany up to VS 1.3</inlineHelpText>
    <label>Position Workers-Council Relevant?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>