force-app/main/default/objects/Hirep__c/fields/Posting__c.field-meta.xml
<CustomField>
    <fullName>Posting__c</fullName>
    <label>Posting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal &amp; External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>