force-app/main/default/objects/Hirep__c/fields/Pre_approval_by__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_by__c</fullName>
    <label>Pre-approval by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>