force-app/main/default/objects/Hirep__c/fields/Pre_approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_Comments__c</fullName>
    <label>Pre-approval Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>