force-app/main/default/objects/Hirep__c/fields/Pre_approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_Date__c</fullName>
    <label>Pre-approval Date</label>
    <type>Date</type>
</CustomField>