force-app/main/default/objects/Hirep__c/fields/Pre_approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_approval_Status__c</fullName>
    <label>Pre-approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-approval Pending</fullName>
                <default>true</default>
                <label>Pre-approval Pending</label>
            </value>
            <value>
                <fullName>Pre-approval Rejected</fullName>
            </value>
            <value>
                <fullName>Pre-approval Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>