force-app/main/default/objects/Hirep__c/fields/Primary_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Job_Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Job Role</label>
    <referenceTo>Job_Role__c</referenceTo>
    <relationshipLabel>HIREP</relationshipLabel>
    <relationshipName>HIREP</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>