force-app/main/default/objects/Hirep__c/fields/Recruitment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Comment__c</fullName>
    <label>Recruitment Comment</label>
    <length>30</length>
    <type>Text</type>
</CustomField>