force-app/main/default/objects/Hirep__c/fields/Recruitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Status__c</fullName>
    <label>Recruitment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruitment Pending</fullName>
            </value>
            <value>
                <fullName>Recruitment Commenced</fullName>
            </value>
            <value>
                <fullName>Interviewing Candidates</fullName>
            </value>
            <value>
                <fullName>Shortlisting</fullName>
            </value>
            <value>
                <fullName>Appointee Selected</fullName>
            </value>
            <value>
                <fullName>Re-interviewing</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Vacancy on hold</fullName>
            </value>
            <value>
                <fullName>Vacancy Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>