force-app/main/default/objects/Hirep__c/fields/Replaces__c.field-meta.xml
<CustomField>
    <fullName>Replaces__c</fullName>
    <formula>Person_replaced_contract_extended__c</formula>
    <label>Replaces</label>
    <type>Text</type>
</CustomField>