force-app/main/default/objects/Hirep__c/fields/Resource_Manager_R_Line__c.field-meta.xml
<CustomField>
    <fullName>Resource_Manager_R_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Manager (R Line)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HIREP</relationshipName>
    <type>Lookup</type>
</CustomField>