force-app/main/default/objects/Hirep__c/fields/Time_Tracking_Required__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracking_Required__c</fullName>
    <label>Time Tracking Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Update Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>